@@ -24,7 +24,7 @@ int main(int argc UNUSED, char **argv UNUSED)
 
 	/* Configure state machine */
 	debug_info = GSM_GetGlobalDebug();
-	GSM_SetDebugFileDescriptor(stderr, debug_info);
+	GSM_SetDebugFileDescriptor(stderr, false, debug_info);
 	GSM_SetDebugLevel("textall", debug_info);
 
 	/* Allocates state machine */
@@ -35,8 +35,6 @@ int main(int argc UNUSED, char **argv UNUSED)
 	}
 	debug_info = GSM_GetDebug(s);
 	GSM_SetDebugGlobal(true, debug_info);
-	GSM_SetDebugFileDescriptor(stderr, debug_info);
-	GSM_SetDebugLevel("textall", debug_info);
 
 	/* Initialize AT engine */
 	Data = &s->Phone.Data;
