@@ -51,7 +51,7 @@ int main(int argc, char **argv)
 
 	/* Configure state machine */
 	debug_info = GSM_GetGlobalDebug();
-	GSM_SetDebugFileDescriptor(stderr, debug_info);
+	GSM_SetDebugFileDescriptor(stderr, false, debug_info);
 	GSM_SetDebugLevel("textall", debug_info);
 
 	/* Allocates state machine */
@@ -62,8 +62,6 @@ int main(int argc, char **argv)
 	}
 	debug_info = GSM_GetDebug(s);
 	GSM_SetDebugGlobal(true, debug_info);
-	GSM_SetDebugFileDescriptor(stderr, debug_info);
-	GSM_SetDebugLevel("textall", debug_info);
 
 	/* Initialize AT engine */
 	Data = &s->Phone.Data;
